--- a/package.json
+++ b/package.json
@@ -7,11 +7,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.0.6",
+    "@vueuse/core": "^8.7.4",
     "element-plus": "^2.2.5",
-    "vue": "^3.2.25"
+    "pinia": "^2.0.14",
+    "vue": "^3.2.25",
+    "vue-router": "4"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.3.3",
+    "sass": "^1.52.3",
     "typescript": "^4.5.4",
     "unplugin-auto-import": "^0.8.7",
     "unplugin-vue-components": "^0.19.6",
