--- a/package.json
+++ b/package.json
@@ -10,18 +10,20 @@
     "@element-plus/icons-vue": "^2.0.10",
     "@vueuse/core": "^9.10.0",
     "element-plus": "^2.2.28",
+    "nprogress": "^0.2.0",
     "pinia": "^2.0.14",
     "pinia-plugin-persistedstate": "^2.4.0",
     "vue": "^3.2.45",
     "vue-router": "4"
   },
   "devDependencies": {
+    "@types/nprogress": "^0.2.0",
     "@vitejs/plugin-vue": "^4.0.0",
     "sass": "^1.52.3",
     "typescript": "^4.5.4",
     "unplugin-auto-import": "^0.12.1",
     "unplugin-vue-components": "^0.22.12",
-    "vite": "^4.0.3",
+    "vite": "^4.1.1",
     "vue-tsc": "^1.0.9"
   }
 }
