--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@element-plus/icons-vue": "^2.0.10",
     "@vueuse/core": "^9.10.0",
+    "axios": "^1.3.3",
     "element-plus": "^2.2.28",
     "nprogress": "^0.2.0",
     "pinia": "^2.0.14",
