--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@vueuse/core": "^9.10.0",
     "axios": "^1.3.3",
     "element-plus": "^2.2.28",
+    "jsencrypt": "^3.3.2",
     "nprogress": "^0.2.0",
     "pinia": "^2.0.14",
     "pinia-plugin-persistedstate": "^2.4.0",
