--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,9 +16,9 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["src/*"],
-      "@types/*": ["types/*"]
+      "@/types/*": ["types/*"]
     }
   },
-  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
+  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue", "types/*.ts"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
