--- a/package.json
+++ b/package.json
@@ -6,26 +6,27 @@
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview"
   },
+  "type": "module",
   "dependencies": {
-    "@element-plus/icons-vue": "^2.1.0",
-    "@vueuse/core": "^10.2.1",
-    "axios": "^1.3.3",
-    "element-plus": "^2.3.7",
+    "@element-plus/icons-vue": "^2.3.1",
+    "@vueuse/core": "^10.7.1",
+    "axios": "^1.6.3",
+    "element-plus": "^2.4.4",
     "jsencrypt": "^3.3.2",
     "nprogress": "^0.2.0",
-    "pinia": "^2.0.14",
+    "pinia": "^2.1.7",
     "pinia-plugin-persistedstate": "^2.4.0",
-    "vue": "^3.2.45",
-    "vue-router": "4"
+    "vue": "^3.4.3",
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
-    "@types/nprogress": "^0.2.0",
-    "@vitejs/plugin-vue": "^4.0.0",
-    "sass": "^1.52.3",
-    "typescript": "^4.5.4",
-    "unplugin-auto-import": "^0.12.1",
+    "@types/nprogress": "^0.2.3",
+    "@vitejs/plugin-vue": "^4.6.2",
+    "sass": "^1.69.6",
+    "typescript": "^4.9.5",
+    "unplugin-auto-import": "^0.12.2",
     "unplugin-vue-components": "^0.22.12",
-    "vite": "^4.3.1",
-    "vue-tsc": "^1.0.9"
+    "vite": "^5.0.10",
+    "vue-tsc": "^1.8.27"
   }
 }
