--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@element-plus/icons-vue": "^2.3.1",
     "@vueuse/core": "^10.9.0",
     "axios": "^1.6.7",
+    "dayjs": "^1.11.10",
     "element-plus": "^2.6.0",
     "jsencrypt": "^3.3.2",
     "nprogress": "^0.2.0",
