--- a/package.json
+++ b/package.json
@@ -23,11 +23,14 @@
   "devDependencies": {
     "@types/nprogress": "^0.2.3",
     "@vitejs/plugin-vue": "^4.6.2",
+    "autoprefixer": "^10.4.19",
+    "postcss": "^8.4.39",
     "sass": "^1.71.1",
+    "tailwindcss": "^3.4.4",
     "typescript": "^4.9.5",
     "unplugin-auto-import": "^0.12.2",
     "unplugin-vue-components": "^0.22.12",
-    "vite": "^5.1.5",
+    "vite": "^5.3.2",
     "vue-tsc": "^1.8.27"
   }
 }
