--- a/package.json
+++ b/package.json
@@ -12,15 +12,18 @@
     "@vueuse/core": "^12.0.0",
     "axios": "^1.7.8",
     "dayjs": "^1.11.13",
-    "element-plus": "^2.9.0",
+    "element-plus": "^2.9.7",
     "jsencrypt": "^3.3.2",
     "nprogress": "^0.2.0",
     "pinia": "^2.2.8",
     "pinia-plugin-persistedstate": "^2.4.0",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "vxe-pc-ui": "^4.3.94",
+    "vxe-table": "^4.11.7"
   },
   "devDependencies": {
+    "@types/node": "^22.13.4",
     "@types/nprogress": "^0.2.3",
     "@vitejs/plugin-vue": "^5.2.1",
     "autoprefixer": "^10.4.20",
@@ -30,7 +33,8 @@
     "typescript": "^4.9.5",
     "unplugin-auto-import": "^0.12.2",
     "unplugin-vue-components": "^0.22.12",
-    "vite": "^6.0.2",
+    "vite": "^6.2.6",
+    "vite-plugin-lazy-import": "^1.0.7",
     "vue-tsc": "^1.8.27"
   }
 }
