--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dayjs": "^1.11.13",
     "element-plus": "^2.9.7",
     "jsencrypt": "^3.3.2",
+    "md-editor-v3": "^5.5.1",
     "nprogress": "^0.2.0",
     "pinia": "^2.2.8",
     "pinia-plugin-persistedstate": "^2.4.0",
